# policy-agent

./: # Take-home project: Policy Agent.md  .env.example  .gitignore  README.md  pyproject.toml
docs/: SOLUTION_GUIDE.md  eval-report.md  plan-of-record.md
policies/: filter-rules.yaml  gaggia-it-policy.md  seed_policy.md  tier-tool-allowlist.yaml
policy_agent/: __init__.py  agent.py  citation_verifier.py  consistency_reviewer.py  cove.py  dispatcher.py  eval.py  filter.py  groundedness.py  ingest.py  leak_detector.py  llm.py  orchestrator.py  policy_chunker.py  policy_config.py  prompt_guard.py  red_path.py  retrieval.py  schema.py  tools.py  tracing.py  ui.py
scripts/: adversarial_fuzzer.py  expand_policy.py  generate_scenarios.py  scratch_agent_smoke.py
tests/: conftest.py  scenarios.yaml
tests/blackbox/: test_scenarios.py
tests/failure_modes/: test_cove.py  test_leak_detector.py  test_prompt_guard.py
tests/whitebox/: test_agent.py  test_dispatcher_tier_enforcement.py  test_filter_redaction.py  test_orchestrator_audit_shape.py  test_policy_chunker.py  test_red_path.py  test_retrieval.py
